2006-01-13  Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with wrong SQL query with "SELECT static_countries.cn_iso_3, FROM ..."

2006-11-23  Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with wrong SQL query with "... AND static_country_zones.=''"

2006-10-31  Franz Holzinger  <kontakt@fholzinger.com>
	* change the param into an addWhere parameter where it is a WHERE clause

2006-10-11  Franz Holzinger  <kontakt@fholzinger.com>
	* additional WHERE clauses to many functions in order to filter the lists
	* call function to load additional TCA to allow fields added from the language specific static_info_tables derivates

2006-09-09  Michael Stucki  <michael@typo3.org>
	* Added a ChangeLog file
	* Initial SVN import, based on static_info_tables 2.0.0